fix: workaround wrong position of anchor links with sticky header
Workaround anchor links scrolling part of the target content
behind the header.

Main bug in bootstrap-italia tracked in
https://github.com/italia/bootstrap-italia/issues/978

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -72,3 +72,10 @@ div.chips-list-wrapper {
     width: 3.5em;
   }
 }
+
+[id] {
+ @media (min-width: #{map-get($grid-breakpoints, lg)}) {
+   scroll-margin-top: $header-center-max-height;
+ }
+ scroll-margin-top: $header-center-max-height-mob;
+}
